# f3tool

./: .gitignore  AGENTS.md  CMakeLists.txt
include/: archive.h  audio.h  bsa.h  esm.h  hash.h  image.h  util.h
src/: archive.c  audio.c  bsa.c  esm.c  hash.c  image.c  main.c  util.c
viewer/: CMakeLists.txt  archive.c  archive.h  main.c  ui.c  ui.h
